<resources>
    <string name="app_name">"StackViewer"</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="refresh_button">Update</string>

    <!--navigation drawer-->
    <string name="nav_questions">Questions</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_users">Users</string>
    <string name="nav_settings">Settings</string>

    <!--errors-->
    <string name="error_obsolete">Obsolete auth session</string>

    <!--content descriptions-->
    <string name="best_answer">The question owner accept this as the best answer</string>
    <string name="vote_up_question">Vote up for a question</string>
    <string name="vote_down_question">Vote down for a question</string>
    <string name="vote_up_answer">Vote up for a answer</string>
    <string name="vote_down_answer">Vote down for a answer</string>

    <string name="voice_accepted">Voice accepted</string>
    <string name="nav_header_text">Android Studio</string>
    <string name="email_user_text">android.studio@android.com</string>
</resources>
