<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/view_progress_bar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/uiTagsSrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/uiTagsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            />
    </android.support.v4.widget.SwipeRefreshLayout>

    <include layout="@layout/view_refresh_button" />

</RelativeLayout>